...
    event.stopPropagation();
    onRetry?.(id);
  };

  return (
    <TouchableOpacity
      testID="recording-card"
      style={[
        cardStyles.card,
        {
          backgroundColor: theme["color-basic-100"],
          borderColor: theme["color-basic-400"],
        },
...
